--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "main": "next.config.js",
     "devDependencies": {
         "@types/node": "^20.4.5",
+        "daisyui": "^3.5.0",
         "prisma": "^5.0.0",
         "ts-node": "^10.9.1",
         "typescript": "^5.1.6"
