--- a/.env
+++ b/.env
@@ -4,4 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+# DATABASE_URL="postgresql://postgres:YpU1ooQbbl2o4o1J@db.jyvwovcwpkjnpbtwyxiz.supabase.co:6543/postgres?connect_timeout=300"
+# DIRECT_URL="postgresql://postgres:YpU1ooQbbl2o4o1J@db.jyvwovcwpkjnpbtwyxiz.supabase.co:5432/postgres"
 DATABASE_URL="file:./dev.db"
+SUBAPASE_PASSWORD="YpU1ooQbbl2o4o1J"
