--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@types/node": "^20.4.5",
         "daisyui": "^3.5.0",
         "prisma": "^5.0.0",
+        "supabase": "^1.82.2",
         "ts-node": "^10.9.1",
         "typescript": "^5.1.6"
     },
